--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ body {
 }
 
 .foto-perfil {
-    width: 310px;
-    height: 310px;
+    width: 300px;
+    height: 300px;
     box-shadow: 0 0 20px rgba(79, 70, 229, 0.3);
     border-radius: 50%;
     border: 4px solid rgba(255, 255, 255, 0.1);
@@ -110,8 +110,8 @@ h1 {
 }
 
 .redes-sociais img {
-    height: 75px;
-    width: 75px;
+    height: 67px;
+    width: 67px;
     object-fit: contain;
 }
 
@@ -121,7 +121,7 @@ padding: 6rem 2rem;
 }
 
 .sobre-titulo {
-font-size: 2.5rem;
+font-size: 2.3rem;
 color: #e2e8f0;
 text-align: center;
 margin-bottom: 20px;
@@ -140,13 +140,13 @@ background: rgba(255, 255, 255, 0.3);
 
 .sobre-paragrafo {
 text-align: center;
-font-size: 1.2rem;
+font-size: 1.1rem;
 }
 
 
 .projetos-titulo {
     text-align: center;
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     margin-bottom: 50px;
 }
 
@@ -174,7 +174,7 @@ font-size: 1.2rem;
 }
 
 .projetos-imagem {
-    height: 200px;
+    height: 180px;
     width: 100%;
     object-fit: cover;
 }
@@ -292,10 +292,16 @@ font-size: 1.2rem;
 @media (max-width: 768px) {
   .nav-links {
     flex-direction: column;
-    gap: 1.2rem;
+    align-items: center;
+    gap: 1rem;
     padding: 1rem;
     font-size: 18px;
-    position: static;
+    position: relative;
+    background: transparent;
+  }
+
+  .nav-links a {
+    font-size: 1.1rem;
   }
 
   .foto-perfil {
