--- a/style.css
+++ b/style.css
@@ -25,33 +25,44 @@ body {
 
 .nav-links {
     position: fixed;
-    background: rgba(15, 23, 42, 0.8);
+    top: 0;
+    left: 0;
     width: 100%;
-    height: auto;
+    background: rgba(15, 23, 42, 0.8);
     z-index: 100;
-    padding: 1.5rem;
+    gap: 70px;
     display: flex;
-    justify-content: center;
-    gap: 4rem;
+    align-items: center;
+    padding: 1.5rem 2rem;
+}
+.portfolio {
+    font-size: 34px;
+    font-weight: 600;
+    color: #e2e8f0;
+    margin-right: auto;
 }
 
+/* Links */
 .nav-links a {
-    font-size: 25px;
-    position: relative;
+    font-size: 27px;
     font-weight: 600;
     text-decoration: none;
     color: #e2e8f0;
+    opacity: 0.8;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 5px;
 }
 
 .nav-links a::after {
     content: '';
-    height: 2px;
-    width: 0;
     position: absolute;
-    bottom: 0;
     left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
     background: linear-gradient(90deg, #4f46e5, #7c3aed);
-    transition: width 0.5s ease;
+    transition: width 0.4s ease;
 }
 
 .nav-links a:hover::after {
@@ -66,20 +77,46 @@ body {
     flex-direction: column;
 }
 
+.icons {
+    margin-bottom: 1.5rem;
+    margin-top: 0.1rem;
+    position: center;
+    display: inline-block;
+    padding: 20px;
+
+}
+
+
 .foto-perfil {
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     box-shadow: 0 0 20px rgba(79, 70, 229, 0.3);
     border-radius: 50%;
     border: 4px solid rgba(255, 255, 255, 0.1);
     animation: flutuar 5s ease-in-out infinite;
+    margin-top: 6.8rem;
 }
 
 h1 {
-    font-size: 3.1rem;
+    font-size: 2.7rem;
+    color: #e2e8f0;
+    font-weight: normal;
+    margin-top: 28px;
+    margin-bottom: 2px;
+}
+
+.nome {
+    font-size: 3.0rem;
     color: #4f46e5;
-    font-weight: bold;
-    margin: 15px;
+    font-weight: normal;
+    margin-bottom: 2px;
+}
+
+h3 {
+    font-size: 1.5rem;
+    color: #e2e8f0;
+    font-weight: normal;
+    margin-bottom: 2.0rem;
 }
 
 .cabecalho-sub-titulo {
@@ -121,36 +158,58 @@ padding: 6rem 2rem;
 }
 
 .sobre-titulo {
-font-size: 2.3rem;
+font-size: 2.6rem;
 color: #e2e8f0;
 text-align: center;
 margin-bottom: 20px;
 }
 
+.sobre-titulo:hover {
+    transform: scaleY(1.2) scaleX(1.2);
+    transition: 1.5s;
+}
+
+.sobre-titulo span {
+    color: #4f46e5;
+}
+
+
 .sobre-caixa {
 padding: 2rem;
-max-width: 750px;
+max-width: 75%;
 margin: 0 auto;
-border-radius: 16px;
+border-radius: 35px;
 border: 1px solid rgba(255, 255, 255, 0.1);
 backdrop-filter: blur(10px);
 background: rgba(255, 255, 255, 0.3);
+margin-bottom: 150px;
 
 }
 
-.sobre-paragrafo {
+.sobre-paragrafo1 {
 text-align: center;
-font-size: 1.1rem;
+font-size: 1.6rem;
+margin-bottom: 1.3rem;
+color: #e2e8f0;
+}
+
+
+.sobre-paragrafo2 {
+text-align: center;
+font-size: 1.5rem;
+text-align: center;
+color: #e2e8f0;
 }
 
 .botao-curriculo {
   display: inline-block;
-  margin-top: 1.5rem;
+  margin-top: 2.0rem;
+  margin-bottom: 2.0rem;
   padding: 0.9rem 2rem;
   background: linear-gradient(45deg, #4f46e5, #4c3aed);
   color: #fff;
   text-decoration: none;
-  font-weight: 650;
+  font-weight: bold;
   border-radius: 30px;
   transition: all 0.3s ease;
   box-shadow: 0 0 15px rgba(79, 70, 229, 0.3);
@@ -159,6 +218,8 @@ font-size: 1.1rem;
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  font-size: 1.2rem;
+  
 }
 
 .botao-curriculo:hover {
@@ -170,8 +231,12 @@ font-size: 1.1rem;
 
 .projetos-titulo {
     text-align: center;
-    font-size: 2.2rem;
-    margin-bottom: 50px;
+    font-size: 2.5rem;
+    margin-bottom: 60px;
+}
+
+.projetos-titulo span {
+    color: #4f46e5;
 }
 
 .projetos-card:hover {
@@ -314,19 +379,17 @@ font-size: 1.1rem;
 
 /* ====== RESPONSIVIDADE ====== */
 @media (max-width: 768px) {
-  .nav-links {
-    flex-direction: row;
-    align-items: center;
-    display: flex;
-    gap: 1.5rem;
+   .nav-links {
     padding: 1rem;
-    position: relative;
-    justify-content: center;
-    background: transparent;
+  }
+
+  .portfolio {
+    font-size: 1.2rem;
   }
 
   .nav-links a {
     font-size: 1rem;
+    margin-left: 1rem; /* reduz espaço */
   }
 
   .foto-perfil {
@@ -335,6 +398,16 @@ font-size: 1.1rem;
   }
 
   h1 {
+    font-size: 1,8rem;
+    text-align: center;
+  }
+
+  h2 {
+    font-size: 1,8rem;
+    text-align: center;
+  }
+
+  h3 {
     font-size: 1,8rem;
     text-align: center;
   }
