--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     padding: 1.5rem 2rem;
 }
 .portfolio {
-    font-size: 34px;
+    font-size: 30px;
     font-weight: 600;
     color: #e2e8f0;
     margin-right: auto;
@@ -44,7 +44,7 @@ body {
 
 /* Links */
 .nav-links a {
-    font-size: 27px;
+    font-size: 22px;
     font-weight: 600;
     text-decoration: none;
     color: #e2e8f0;
@@ -78,7 +78,7 @@ body {
 }
 
 .icons {
-    margin-bottom: 1.5rem;
+    margin-bottom: 2.9rem;
     margin-top: 0.1rem;
     position: center;
     display: inline-block;
@@ -88,17 +88,17 @@ body {
 
 
 .foto-perfil {
-    width: 350px;
-    height: 350px;
+    width: 305px;
+    height: 305px;
     box-shadow: 0 0 20px rgba(79, 70, 229, 0.3);
     border-radius: 50%;
     border: 4px solid rgba(255, 255, 255, 0.1);
     animation: flutuar 5s ease-in-out infinite;
-    margin-top: 6.8rem;
+    margin-top: 8.8rem;
 }
 
 h1 {
-    font-size: 2.7rem;
+    font-size: 2.5rem;
     color: #e2e8f0;
     font-weight: normal;
     margin-top: 28px;
@@ -106,17 +106,17 @@ h1 {
 }
 
 .nome {
-    font-size: 3.0rem;
+    font-size: 2.4rem;
     color: #4f46e5;
     font-weight: normal;
     margin-bottom: 2px;
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: #e2e8f0;
     font-weight: normal;
-    margin-bottom: 2.0rem;
+    margin-bottom: 0.2rem;
 }
 
 .cabecalho-sub-titulo {
@@ -147,14 +147,16 @@ h3 {
 }
 
 .redes-sociais img {
-    height: 67px;
-    width: 67px;
+    height: 60px;
+    width: 60px;
     object-fit: contain;
 }
 
 
 .sobre {
 padding: 6rem 2rem;
+margin-top: 6.0rem;
+margin-bottom: 2.0rem;
 }
 
 .sobre-titulo {
@@ -162,11 +164,6 @@ font-size: 2.6rem;
 color: #e2e8f0;
 text-align: center;
 margin-bottom: 20px;
-}
-
-.sobre-titulo:hover {
-    transform: scaleY(1.2) scaleX(1.2);
-    transition: 1.5s;
 }
 
 .sobre-titulo span {
@@ -188,7 +185,7 @@ margin-bottom: 150px;
 
 .sobre-paragrafo1 {
 text-align: center;
-font-size: 1.6rem;
+font-size: 1.3rem;
 margin-bottom: 1.3rem;
 color: #e2e8f0;
 }
@@ -196,7 +193,7 @@ color: #e2e8f0;
 
 .sobre-paragrafo2 {
 text-align: center;
-font-size: 1.5rem;
+font-size: 1.2rem;
 text-align: center;
 color: #e2e8f0;
 }
@@ -218,7 +215,7 @@ color: #e2e8f0;
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   
 }
 
@@ -228,6 +225,9 @@ color: #e2e8f0;
   box-shadow: 0 0 25px rgba(79, 70, 229, 0.5);
 }
 
+.projetos {
+    margin-bottom: 6rem;
+}
 
 .projetos-titulo {
     text-align: center;
